[project]
name = "randan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autocorrect>=2.6.1",
    "beautifulsoup4>=4.12.3",
    "factor-analyzer>=0.5.1",
    "google-api-python-client>=2.154.0",
    "googledrivedownloader>=0.4",
    "graphviz>=0.14",
    "matplotlib>=3.1.1",
    "numpy>=1.18.4",
    "openpyxl>=3.1.5",
    "pandas>=1.0.3",
    "pydot>=1.4.1",
    "pymystem3>=0.2.0",
    "regex>=2024.9.11",
    "requests>=2.32.3",
    "scikit-learn>=0.23.1",
    "statsmodels>=0.11.1",
    "stop-words>=2018.7.23",
    "tqdm>=4.66.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
